# pipeline-lite

./: main.py  pyproject.toml
docs/: CHANGELOG.md
src/pipeline_lite/: creds.py  main.py
