[project]
name = "pipeline-lite"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pipeline-eds>=0.4.13",
]

[project.urls]
Homepage = "https://github.com/city-of-memphis-wastewater/pipeline-lite"
Repository = "https://github.com/city-of-memphis-wastewater/pipeline-lite"


[dependency-groups]
dev = [
    "build>=1.0.0",
    "setuptools>=61.0.0",
    "wheel",
    "uv>=0.5.0; python_version >= '3.8'",
    "pyinstaller>=6.0.0; python_version >= '3.8'",
]

[project.scripts]
pipeline_lite = "pipeline_lite.cli:run_cli"

[tool.setuptools.packages.find]
where = ["src"] # Tell setuptools to look in src/
include = ["pipeline_lite*"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
